# vibe

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/vibe/: __init__.py  cli.py
